# python-for-tdd

./: .gitignore  Pipfile  README.md  functional_test.py  functional_tests.py  pyproject.toml
app/lists/: models.py  tests.py  urls.py  views.py
app/lists/migrations/: 0001_initial.py  0002_item_text.py  0003_list.py  0004_item_list.py
app/lists/templates/: base.html  home.html  list.html
deploy_tools/: gunicorn-systemd.template.service  gunicorn-upstart.template.conf  nginx.template.conf  provisioning_notes.md
functional_tests/: tests.py
lists/: tests.py
src/core/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
src/lists/: urls.py  views.py
src/lists/migrations/: 0004_item_list.py
src/templates/: base.html  home.html
superlist/: example.env  settings.py  urls.py
superlists/: functional_tests.py  settings.py  urls.py
superlists/functional_test/: tests.py
superlists/lists/: tests.py  urls.py  views.py
superlists/lists/migrations/: 0001_initial.py  0002_item_text.py  0003_list.py
superlists/lists/templates/: base.html  home.html  list.html
superlists/superlists/: settings.py  urls.py
