[tool.poetry]
name = "tdd-python"
version = "0.1.0"
description = ""
authors = ["Phil Wang <philwang0512@gmail.com>"]
readme = "README.md"
packages = [{include = "tdd_python"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
ipython = "^8.13.2"
selenium = "^4.9.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
