[tool.poetry]
name = "python-tdd"
version = "0.1.0"
description = ""
authors = ["Kitty Hsieh <kitty40632@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.9.1"
webdriver-manager = "^3.8.6"
django = "^4.2.1"
gunicorn = "^20.1.0"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
